--- a/src/app/offers/offers-list/offers-list.component.html
+++ b/src/app/offers/offers-list/offers-list.component.html
@@ -5,11 +5,17 @@
   <section class="offers__list" *ngIf="!isLoading">
     <div class="offer" *ngFor="let offer of offers">
       <h3 class="offer__name">{{ offer.name }}</h3>
+      <p class="offer__expLevel">{{ offer.experienceLevel }}</p>
       <p class="offer__salary">
         {{ offer.salaryMin }} - {{ offer.salaryMax }} PLN
       </p>
-      <p>Gdansk</p>
-      <small class="offer__created">{{ offer.createdAt | date }}</small>
+      <p *ngIf="!offer.isRemote" class="offer__location"><b>Gdansk</b></p>
+      <p *ngIf="offer.isRemote" class="offer__remote">
+        {{ "OFFER.REMOTE" | translate }}
+      </p>
+      <small class="offer__created">{{
+        offer.createdAt | date: "shortDate"
+      }}</small>
       <img
         src="https://www.logaster.com/blog/wp-content/uploads/2018/05/Graphicsprings.png"
         alt=""
@@ -18,11 +24,16 @@
       <p class="offer__companyName">{{ offer.company.name }}</p>
       <p class="offer__city"></p>
       <ul class="offer__musthave">
-        <li *ngFor="let must of offer.mustHave" class="offer__musthave__item">
+        <li
+          *ngFor="let must of offer.mustHave | slice: 0:3"
+          class="offer__musthave__item"
+        >
           {{ must }}
         </li>
       </ul>
-      <a class="offer__apply">Apply</a>
+      <a [routerLink]="['/offers', offer.slug]" class="offer__apply">{{
+        "OFFER.APPLY" | translate
+      }}</a>
     </div>
   </section>
 </div>
