--- a/src/app/offers/offers-list/offers-list.component.scss
+++ b/src/app/offers/offers-list/offers-list.component.scss
@@ -9,10 +9,6 @@
   padding: 10px 0;
   background-color: #fff;
   border-radius: 20px;
-  //   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
-  //     0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
-  //     0 16px 16px rgba(0, 0, 0, 0.05);
-
   box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
@@ -30,7 +26,11 @@
 
   &__name {
     text-align: center;
-    color: #333;
+    color: darken(#31e8e8, 10%);
+  }
+
+  &__expLevel {
+    margin: 5px 0;
   }
 
   &__companyLogo {
@@ -43,7 +43,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
     justify-content: center;
-    padding: 5px;
+    padding: 10px;
 
     &__item {
       padding: 5px 10px;
@@ -57,6 +57,18 @@
     }
   }
 
+  &__remote {
+    margin: 5px 0;
+    background-color: #ff6961;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 4px;
+  }
+
+  &__location {
+    margin: 10px 0;
+  }
+
   &__apply {
     font-size: 16px;
     cursor: pointer;
@@ -64,12 +76,12 @@
     border-radius: 20px;
     border: 1px solid transparent;
     color: #fff;
-    background-color: #31e8e8;
+    background-color: darken(#31e8e8, 10%);
 
     &:hover {
       color: #31e8e8;
       background-color: #fff;
-      border: 1px solid #31e8e8;
+      border: 1px solid darken(#31e8e8, 10%);
     }
   }
 }
