--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,13 +10,13 @@
       </a>
       <ul class="nav__list">
         <li class="nav__item">
-          <a>{{ "HEADER.OFFERS" | translate }}</a>
+          <a routerLink="/offers">{{ "HEADER.OFFERS" | translate }}</a>
         </li>
         <li class="nav__item">
           <a>{{ "HEADER.COMPANIES" | translate }}</a>
         </li>
         <li class="nav__item">
-          <a>{{ "HEADER.ABOUT" | translate }}</a>
+          <a>{{ "HEADER.ADDOFFER" | translate }}</a>
         </li>
       </ul>
       <ul class="nav__list">
