--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -12,7 +12,8 @@
 
 .logo {
   &__img {
-    height: 100px;
+    height: 80px;
+    width: auto;
   }
 }
 
@@ -22,12 +23,12 @@
 }
 
 .nav__item {
-  margin-right: 10px;
+  margin-right: 15px;
   cursor: pointer;
 
   a {
     color: #31c6e8;
-    font-size: 20px;
+    font-size: 18px;
 
     &:hover {
       color: darken(#31c6e8, 10%);
@@ -38,6 +39,7 @@
     a {
       color: #fff;
       background-color: #31c6e8;
+      font-size: 18px;
       padding: 8px 12px;
       border-radius: 20px;
       transition: background-color 0.3s ease;
