--- a/src/app/offers/offers-list/offers-list.component.scss
+++ b/src/app/offers/offers-list/offers-list.component.scss
@@ -1,12 +1,12 @@
 .offers__list {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding: 20px;
   grid-gap: 1rem;
 }
 
 .offer {
-  padding: 10px 0;
+  padding: 10px 5px;
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.05);
@@ -26,6 +26,7 @@
 
   &__name {
     text-align: center;
+    font-size: 20px;
     color: darken(#31e8e8, 10%);
   }
 
@@ -90,4 +91,28 @@
   display: flex;
   justify-content: center;
   padding: 10px 0;
+}
+
+.flexAlignCenter {
+  display: flex;
+  align-items: center;
+}
+
+mat-icon {
+  margin-right: 5px;
+}
+
+mat-form-field {
+  margin-right: 20px;
+}
+
+.search-section {
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  margin-left: 10px;
 }
