--- a/src/app/offers/offers-list/offers-list.component.scss
+++ b/src/app/offers/offers-list/offers-list.component.scss
@@ -116,3 +116,9 @@ mat-form-field {
 button {
   margin-left: 10px;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+}
