Add mobile menu

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,48 +1,53 @@
 <header class="header">
   <div class="container">
     <nav class="nav">
-      <a routerLink="/" class="logo">
+      <a routerLink="/" class="logo" (click)="onHideMenu()">
         <img
           src="../../../assets/img/jobOffers_logo.png"
           alt="it-job-offers-logo"
           class="logo__img"
         />
       </a>
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a routerLink="/offers">{{ "HEADER.OFFERS" | translate }}</a>
-        </li>
-        <li class="nav__item">
-          <a>{{ "HEADER.COMPANIES" | translate }}</a>
-        </li>
-        <li class="nav__item">
-          <a>{{ "HEADER.ADDOFFER" | translate }}</a>
-        </li>
-      </ul>
-      <ul class="nav__list">
-        <li class="nav__item nav__item--auth">
-          <a>{{ "HEADER.REGISTER" | translate }}</a>
-        </li>
-        <li class="nav__item nav__item--auth">
-          <a>{{ "HEADER.LOGIN" | translate }}</a>
-        </li>
-        <li class="nav__item">
-          <img
-            (click)="onSwitchLanguage('pl')"
-            src="../../../assets/img/poland.png"
-            alt="poland-flag"
-            class="flag"
-          />
-        </li>
-        <li class="nav__item">
-          <img
-            (click)="onSwitchLanguage('en')"
-            src="../../../assets/img/united-kingdom.png"
-            alt="uk-flag"
-            class="flag"
-          />
-        </li>
-      </ul>
+      <div class="burger" (click)="onToggleMenu()">
+        <mat-icon [inline]="true">menu</mat-icon>
+      </div>
+      <div class="menu" #menu (click)="onHideMenu()">
+        <ul class="nav__list nav__list--left">
+          <li class="nav__item">
+            <a routerLink="/offers">{{ "HEADER.OFFERS" | translate }}</a>
+          </li>
+          <li class="nav__item">
+            <a>{{ "HEADER.COMPANIES" | translate }}</a>
+          </li>
+          <li class="nav__item">
+            <a>{{ "HEADER.ADDOFFER" | translate }}</a>
+          </li>
+        </ul>
+        <ul class="nav__list">
+          <li class="nav__item nav__item--auth">
+            <a>{{ "HEADER.REGISTER" | translate }}</a>
+          </li>
+          <li class="nav__item nav__item--auth">
+            <a>{{ "HEADER.LOGIN" | translate }}</a>
+          </li>
+          <li class="nav__item">
+            <img
+              (click)="onSwitchLanguage('pl')"
+              src="../../../assets/img/poland.png"
+              alt="poland-flag"
+              class="flag"
+            />
+          </li>
+          <li class="nav__item">
+            <img
+              (click)="onSwitchLanguage('en')"
+              src="../../../assets/img/united-kingdom.png"
+              alt="uk-flag"
+              class="flag"
+            />
+          </li>
+        </ul>
+      </div>
     </nav>
   </div>
 </header>
