--- a/src/app/offers/offers-list/offers-list.component.html
+++ b/src/app/offers/offers-list/offers-list.component.html
@@ -62,7 +62,7 @@
       color="primary"
       class="reset-button"
     >
-      Reset All
+      {{ "SEARCH.RESET" | translate }}
     </button>
   </section>
   <div class="spinner-wrapper" *ngIf="isLoading">
