--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -52,7 +52,58 @@
   }
 }
 
+.menu {
+  display: flex;
+}
+
 .flag {
   width: 25px;
   height: 25px;
+}
+
+.burger {
+  font-size: 40px;
+  display: none;
+  cursor: pointer;
+}
+
+@media (max-width: 576px) {
+  .burger {
+    display: block;
+  }
+
+  .menu {
+    display: none;
+    padding-top: 10px;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 13vh;
+    width: 100%;
+    height: 87vh;
+    z-index: 2;
+    align-items: center;
+    transform: translateX(100%);
+    background-color: #fff;
+    -webkit-transition: transform 0.2s ease-in;
+    -moz-transition: transform 0.2s ease-in;
+    -o-transition: transform 0.2s ease-in;
+    transition: transform 0.2s ease-in;
+  }
+
+  .nav__list {
+    flex-direction: column;
+  }
+
+  .nav__item {
+    margin-bottom: 20px;
+  }
+
+  .flag {
+    width: auto;
+    height: 40px;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 992px) {
 }
