--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -17,18 +17,18 @@
             <a routerLink="/offers">{{ "HEADER.OFFERS" | translate }}</a>
           </li>
           <li class="nav__item">
-            <a>{{ "HEADER.COMPANIES" | translate }}</a>
+            <a routerLink="/companies">{{ "HEADER.COMPANIES" | translate }}</a>
           </li>
           <li class="nav__item">
-            <a>{{ "HEADER.ADDOFFER" | translate }}</a>
+            <a routerLink="/addoffer">{{ "HEADER.ADDOFFER" | translate }}</a>
           </li>
         </ul>
         <ul class="nav__list">
           <li class="nav__item nav__item--auth">
-            <a>{{ "HEADER.REGISTER" | translate }}</a>
+            <a routerLink="/register">{{ "HEADER.REGISTER" | translate }}</a>
           </li>
           <li class="nav__item nav__item--auth">
-            <a>{{ "HEADER.LOGIN" | translate }}</a>
+            <a routerLink="/login">{{ "HEADER.LOGIN" | translate }}</a>
           </li>
           <li class="nav__item">
             <img
