--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,33 @@
-<p>register works!</p>
+<section class="register">
+  <h2 class="register__title">{{ "REGISTER.REGISTER" | translate }}</h2>
+  <form class="register__form">
+    <mat-form-field>
+      <mat-label>{{ "REGISTER.NAME" | translate }}</mat-label>
+      <input matInput placeholder="Please add a name" type="text" />
+      <mat-icon matSuffix>face</mat-icon>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Please add an email" type="email" />
+      <mat-icon matSuffix>email</mat-icon>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>{{ "REGISTER.PASSWORD" | translate }}</mat-label>
+      <input matInput placeholder="Please add a password" type="password" />
+      <mat-icon matSuffix>vpn_key</mat-icon>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>{{ "REGISTER.CONFIRM_PASSWORD" | translate }}</mat-label>
+      <input matInput placeholder="Please confirm password" type="password" />
+      <mat-icon matSuffix>vpn_key</mat-icon>
+    </mat-form-field>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      class="register__button"
+    >
+      {{ "REGISTER.CREATE" | translate }}
+    </button>
+  </form>
+</section>
