--- a/src/app/offers/offers-list/offers-list.component.html
+++ b/src/app/offers/offers-list/offers-list.component.html
@@ -87,7 +87,7 @@
         >{{ offer.createdAt | date: "shortDate" }}</small
       >
       <img
-        src="https://www.logaster.com/blog/wp-content/uploads/2018/05/Graphicsprings.png"
+        src="../../../assets/img/company.png"
         alt=""
         class="offer__companyLogo"
       />
