--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -16,6 +16,12 @@
           <li class="nav__item">
             <a routerLink="/offers">{{ "HEADER.OFFERS" | translate }}</a>
           </li>
+          <li class="nav__item nav__item--observe">
+            <a
+              ><mat-icon matBadge="1" matBadgeColor="accent">star</mat-icon
+              >Obserwowane</a
+            >
+          </li>
           <li class="nav__item">
             <a routerLink="/companies">{{ "HEADER.COMPANIES" | translate }}</a>
           </li>
