--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,10 @@ a {
   margin-right: 5px;
 }
 
+.mtb-10 {
+  margin: 10px 0;
+}
+
 $header-background-color: #f8f8f8;
 $background-color: #fff;
 $primary-color: #fff;
