--- a/src/app/offers/offer-item/offer-item.component.scss
+++ b/src/app/offers/offer-item/offer-item.component.scss
@@ -31,6 +31,10 @@
   &__observe {
     font-size: 20px;
     cursor: pointer;
+
+    &:hover {
+      color: lighten(#333, 10%);
+    }
   }
 
   &__description {
