--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -29,13 +29,17 @@
           <li class="nav__item">
             <a routerLink="/addoffer">{{ "HEADER.ADDOFFER" | translate }}</a>
           </li>
-        </ul>
-        <ul class="nav__list">
-          <li class="nav__item nav__item--auth">
+          <li class="nav__item nav__item--auth" *ngIf="!isAuth">
             <a routerLink="/register">{{ "HEADER.REGISTER" | translate }}</a>
           </li>
-          <li class="nav__item nav__item--auth">
+          <li class="nav__item nav__item--auth" *ngIf="!isAuth">
             <a routerLink="/login">{{ "HEADER.LOGIN" | translate }}</a>
+          </li>
+          <li class="nav__item nav__item--auth" *ngIf="isAuth">
+            <a routerLink="/dashboard">{{ "HEADER.MY_OFFERS" | translate }}</a>
+          </li>
+          <li class="nav__item nav__item--auth" *ngIf="isAuth">
+            <a (click)="onLogout()">{{ "HEADER.LOGOUT" | translate }}</a>
           </li>
           <li class="nav__item">
             <img
