--- a/src/app/offers/similar-offers/similar-offers.component.scss
+++ b/src/app/offers/similar-offers/similar-offers.component.scss
@@ -42,3 +42,17 @@
     grid-auto-flow: row;
   }
 }
+
+@media (max-width: 768px) and (min-width: 577px) {
+  .offers {
+    grid-auto-flow: unset;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 992px) and (min-width: 769px) {
+  .offers {
+    grid-auto-flow: unset;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
