--- a/src/app/offers/similar-offers/similar-offers.component.html
+++ b/src/app/offers/similar-offers/similar-offers.component.html
@@ -1,5 +1,5 @@
 <section class="similar-offers">
-  <h2 class="similar-offers__title">
+  <h2 class="mat-h2">
     {{ "SIMILAR_OFFERS.HEADER" | translate: translateParams }}
   </h2>
   <div class="offers" *ngIf="!isLoading">
