--- a/src/app/dashboard/add-offer/add-offer.component.html
+++ b/src/app/dashboard/add-offer/add-offer.component.html
@@ -1,1 +1,119 @@
-<p>add-offer works!</p>
+<section class="add-offer">
+  <div class="container">
+    <form class="form" [formGroup]="offerForm" (ngSubmit)="onSubmit()">
+      <mat-form-field appearance="fill">
+        <mat-label>Name</mat-label>
+        <input matInput type="text" name="name" formControlName="name" />
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Experience Level</mat-label>
+        <mat-select name="experienceLevel" formControlName="experienceLevel">
+          <mat-option *ngFor="let level of expLevels" [value]="level">{{
+            level
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Category</mat-label>
+        <mat-select name="category" formControlName="category">
+          <mat-option [value]="'junior'">Frontend</mat-option>
+          <mat-option [value]="'junior'">Backend</mat-option>
+          <mat-option [value]="'junior'">Testing</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div class="flex">
+        <mat-form-field appearance="fill">
+          <mat-label>Min Salary</mat-label>
+          <input
+            matInput
+            type="number"
+            name="minSalary"
+            formControlName="minSalary"
+          />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Max Salary</mat-label>
+          <input
+            matInput
+            type="number"
+            name="maxSalary"
+            formControlName="maxSalary"
+          />
+        </mat-form-field>
+      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>description</mat-label>
+        <textarea
+          matInput
+          class="form__textarea"
+          name="description"
+          formControlName="description"
+        ></textarea>
+      </mat-form-field>
+      <div class="flex">
+        <mat-form-field appearance="fill">
+          <mat-label>Must Have</mat-label>
+          <mat-select multiple name="mustHave" formControlName="mustHave">
+            <mat-option [value]="'junior'">Java</mat-option>
+            <mat-option [value]="'junior'">C#</mat-option>
+            <mat-option [value]="'junior'">C++</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Nice To Have</mat-label>
+          <mat-select multiple name="niceToHave" formControlName="niceToHave">
+            <mat-option [value]="'junior'">Java</mat-option>
+            <mat-option [value]="'junior'">C#</mat-option>
+            <mat-option [value]="'junior'">C++</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <mat-checkbox
+        class="example-margin"
+        name="isRemote"
+        formControlName="isRemote"
+        >Remote</mat-checkbox
+      >
+      <h2 class="mat-h2">Address</h2>
+      <div class="flex">
+        <mat-form-field appearance="fill">
+          <mat-label>City</mat-label>
+          <input matInput type="text" name="city" formControlName="city" />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Post Code</mat-label>
+          <input
+            matInput
+            type="text"
+            name="postCode"
+            formControlName="postCode"
+          />
+        </mat-form-field>
+      </div>
+      <div class="flex">
+        <mat-form-field appearance="fill">
+          <mat-label>Street</mat-label>
+          <input matInput type="text" name="street" formControlName="street" />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Number</mat-label>
+          <input
+            matInput
+            type="number"
+            name="number"
+            formControlName="number"
+          />
+        </mat-form-field>
+      </div>
+      <button
+        mat-raised-button
+        type="submit"
+        color="primary"
+        class="form__button"
+        [disabled]="!offerForm.valid"
+      >
+        Create
+      </button>
+    </form>
+  </div>
+</section>
