Add dialog for deleting offers in dashboard

--- a/src/app/dashboard/company-offer-item/company-offer-item.component.html
+++ b/src/app/dashboard/company-offer-item/company-offer-item.component.html
@@ -31,6 +31,8 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button color="primary">UPDATE</button>
-    <button mat-raised-button color="primary">DELETE</button>
+    <button mat-raised-button color="primary" (click)="onOpenDeleteDialog()">
+      DELETE
+    </button>
   </mat-card-actions>
 </mat-card>
