--- a/src/app/dashboard/company-offers/company-offers.component.html
+++ b/src/app/dashboard/company-offers/company-offers.component.html
@@ -3,6 +3,7 @@
     <app-company-offer-item
       [offer]="offer"
       *ngFor="let offer of offers"
+      (offerDeleted)="onDeleteOffer($event)"
     ></app-company-offer-item>
   </section>
   <div class="spinner-wrapper" *ngIf="isLoading">
