--- a/src/app/dashboard/company-offers/company-offers.component.html
+++ b/src/app/dashboard/company-offers/company-offers.component.html
@@ -4,6 +4,7 @@
       [offer]="offer"
       *ngFor="let offer of offers"
       (offerDeleted)="onDeleteOffer($event)"
+      (offerUpdated)="onUpdateOffer()"
     ></app-company-offer-item>
   </section>
   <div class="spinner-wrapper" *ngIf="isLoading">
