Deleting offer from watched offers after deleting it from dashboard

--- a/src/app/dashboard/company-offer-item/company-offer-item.component.html
+++ b/src/app/dashboard/company-offer-item/company-offer-item.component.html
@@ -31,9 +31,11 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="onOpenUpdateDialog()">
+      <mat-icon>create</mat-icon>
       UPDATE
     </button>
     <button mat-raised-button color="primary" (click)="onOpenDeleteDialog()">
+      <mat-icon>delete</mat-icon>
       DELETE
     </button>
   </mat-card-actions>
